syntax = "proto3";

import "zeloscloud/trace/trace.proto";

package zeloscloud.trace;

service TraceSubscribe {
  rpc Subscribe(stream SubscribeRequest) returns (stream SubscribeResponse);
}

message SubscribeCommand {
    optional string filter = 1;
    optional sfixed64 start_time = 2;
}

message UnsubscribeCommand {
    optional string filter = 1;
}

message SubscribeRequest {
    oneof cmd {
        SubscribeCommand subscribe = 1;
        UnsubscribeCommand unsubscribe = 2;
    }
}

message SubscribeResponse {
  oneof msg {
    TraceMessageBatch trace_message_batch = 1;
  }
}
